Add option to allow long-pressing the back button to kill the foreground app [Frameworks part]

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1853,4 +1853,8 @@
     <bool name="config_switch_phone_on_voice_reg_state_change">true</bool>
 
     <bool name="config_sms_force_7bit_encoding">false</bool>
+
+    <!-- Timeout in MS for how long you have to long-press the back button to
+         kill the foreground app. -->
+    <integer name="config_backKillTimeout">2000</integer>
 </resources>
